Updating to BSB v5

--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
   "main": "lib/index.js",
   "version": "1.0.7",
   "dependencies": {
-    "@bettercorp/service-base": "^5.0.20210630172432-featurev5",
+    "@bettercorp/service-base": "^5.1.20210701165109",
     "@bettercorp/tools": "^1.1.20210611181403",
-    "@types/node": "^14.17.6",
+    "@types/node": "^14.17.7",
     "mailparser": "^3.2.0",
     "smtp-server": "^3.9.0",
     "spf-check": "^0.4.3"
