--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   },
   "scripts": {
     "build": "tsc",
-    "version": "node ./node_modules/@bettercorp/service-base/build/version.js $0"
+    "version": "node ./node_modules/@bettercorp/service-base/build/version.js $0",
+    "create": "ts-node node_modules/@bettercorp/service-base/lib/bootstrap.js $0"
   },
   "files": [
     "lib/**/*"
@@ -14,16 +15,17 @@
   "main": "lib/index.js",
   "version": "1.0.7",
   "dependencies": {
-    "@bettercorp/service-base": "^5.1.20210701165109",
+    "@bettercorp/service-base": "^6.0.20211016180933",
     "@bettercorp/tools": "^1.1.20210611181403",
     "@types/node": "^14.17.7",
-    "mailparser": "^3.2.0",
+    "mailparser": "^3.4.0",
     "smtp-server": "^3.9.0",
     "spf-check": "^0.4.3"
   },
   "devDependencies": {
-    "ts-node": "^8.0.2",
-    "tslint": "^5.12.0",
-    "typescript": "^3.9.10"
-  }
+    "ts-node": "^10.3.0",
+    "tslint": "^6.1.3",
+    "typescript": "^4.4.4"
+  },
+  "bsb_project": true
 }
