--- a/package.json
+++ b/package.json
@@ -6,26 +6,28 @@
   },
   "scripts": {
     "build": "tsc",
-    "version": "node ./node_modules/@bettercorp/service-base/build/version.js $0",
-    "create": "ts-node node_modules/@bettercorp/service-base/lib/bootstrap.js $0"
+    "dev": "nodemon --config node_modules/@bettercorp/service-base/build/nodemon.json",
+    "start": "ts-node node_modules/@bettercorp/service-base/lib/index.js",
+    "create": "ts-node node_modules/@bettercorp/service-base/lib/bootstrap.js $0",
+    "version": "node ./node_modules/@bettercorp/service-base/build/version-bcorp.js $0"
   },
   "files": [
     "lib/**/*"
   ],
   "main": "lib/index.js",
-  "version": "1.0.7",
+  "version": "2.0.0",
+  "bsb_project": true,
+  "devDependencies": {
+    "eslint": "^8.8.0",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.5.5"
+  },
   "dependencies": {
-    "@bettercorp/service-base": "^6.0.20211016180933",
-    "@bettercorp/tools": "^1.1.20210611181403",
-    "@types/node": "^14.17.7",
+    "@bettercorp/service-base": "^7.4.20220115132048",
+    "@bettercorp/tools": "^1.3.20220126151136",
+    "@types/node": "^17.0.13",
     "mailparser": "^3.4.0",
     "smtp-server": "^3.9.0",
     "spf-check": "^0.4.3"
-  },
-  "devDependencies": {
-    "ts-node": "^10.3.0",
-    "tslint": "^6.1.3",
-    "typescript": "^4.4.4"
-  },
-  "bsb_project": true
+  }
 }
