--- a/package.json
+++ b/package.json
@@ -18,16 +18,18 @@
   "version": "2.0.0",
   "bsb_project": true,
   "devDependencies": {
-    "eslint": "^8.8.0",
-    "ts-node": "^10.4.0",
-    "typescript": "^4.5.5"
+    "@types/nodemailer": "^6.4.4",
+    "eslint": "^8.10.0",
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.2"
   },
   "dependencies": {
     "@bettercorp/service-base": "^7.4.20220115132048",
     "@bettercorp/tools": "^1.3.20220126151136",
-    "@types/node": "^17.0.13",
+    "@types/node": "^17.0.21",
     "mailparser": "^3.4.0",
-    "smtp-server": "^3.9.0",
+    "nodemailer": "^6.7.2",
+    "smtp-server": "^3.10.0",
     "spf-check": "^0.4.3"
   }
 }
