--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@bettercorp/service-base": "^7.4.20220115132048",
     "@bettercorp/tools": "^1.3.20220126151136",
     "@types/node": "^17.0.21",
+    "handlebars": "^4.7.7",
     "mailparser": "^3.4.0",
     "nodemailer": "^6.7.2",
     "smtp-server": "^3.10.0",
