--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
   },
   "dependencies": {
     "@bettercorp/service-base": "^7.4.20220115132048",
-    "@bettercorp/tools": "^1.3.20220126151136",
+    "@bettercorp/tools": "^1.3.20220310075141",
     "@types/node": "^17.0.21",
+    "form-data": "^4.0.0",
     "handlebars": "^4.7.7",
+    "mailgun.js": "^5.0.1",
     "mailparser": "^3.4.0",
     "nodemailer": "^6.7.2",
     "smtp-server": "^3.10.0",
